--- a/hello1.html
+++ b/hello1.html
@@ -7,7 +7,6 @@
     <title>github html</title>
 </head>
 <body>
-    hello world!!! hello again!!! hello hello hello
-    apples oranges
+    hello world!!! hello again!!! hello 3rd time
 </body>
 </html>
